fixed images and spacing in about

--- a/css/about.css
+++ b/css/about.css
@@ -29,6 +29,69 @@
   }
 
 
+.box {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: auto;
+  min-width: 262px;
+  max-height: auto;
+  height: 200px;
+  margin: -40px 0 0 0;
+  /* margin-bottom: 8%; */
+  text-align: center;
+  font-family: arial;
+  background-color: rgb(248, 246, 246);
+  /* position: absolute; */
+  top: 102px;
+} 
+  
+.right-flower {
+    position: absolute;
+    right: 0px;
+    top: auto;
+    max-width: 100%;
+}
+.left-flower {
+  position: absolute;
+  left: 0%;
+  top: auto; 
+  max-width: 100%;
+}
+.box img{ 
+max-width: 100%;
+height: 200px;
+object-fit: contain;
+float: left;
+clear: right;
+}
+.box a img{ 
+  max-width: 100%;
+  height: 200px;
+  object-fit: contain;
+  float: left;
+  clear: right;
+  }
+.words {
+    margin-top: 40px;
+    padding-top: 50px;
+}
+.words hr {
+    width: 20%;
+    margin: 10px auto 10px auto;
+    border: 1px solid #ddd;
+}
+.words p {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;}
+
+
+
+
+
+
+
+
+
   .about-section {
     padding: 50px;
     text-align: center;
