--- a/css/home.css
+++ b/css/home.css
@@ -454,67 +454,11 @@ display: block;
 
 
 
-.box {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 100%;
-  max-width: auto;
-  min-width: 262px;
-  max-height: auto;
-  height: 200px;
-  margin: -40px 0 0 0;
-  /* margin-bottom: 8%; */
-  text-align: center;
-  font-family: arial;
-  background-color: rgb(248, 246, 246);
-  /* position: absolute; */
-  top: 102px;
-} 
-  
-  .box img{ 
-  max-width: 100%;
-  height: 200px;
-  object-fit: contain;
-  float: left;
-  clear: right;
-  }
-  .box a img{ 
-    max-width: 100%;
-    height: 200px;
-    object-fit: contain;
-    float: left;
-    clear: right;
-    }
-  .right {
-      position: absolute;
-      right: 0px;
-      top: auto;
-      max-width: 100%;
-  }
-  .left {
-    position: absolute;
-    left: 0%;
-    top: auto; 
-    max-width: 100%;
-  }
    script{
   display: inline;
   max-width: 100%;
   height: auto;
   }
-  .words {
-      margin-top: 40px;
-      padding-top: 50px;
-  }
-  .words hr {
-      width: 20%;
-      margin: 10px auto 10px auto;
-      border: 1px solid #ddd;
-  }
-  .words p {
-    text-align: center;
-  font-family: 'Open Sans', sans-serif;}
-
-
 
     /*Bullet Links*/
 .bullets a{
