--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ body{
 /*The .content wrapper styles elements in the html with the same class name*/
 .content-wrapper{
     width: 100%;
-    margin: 0% 2% 15% 0%;}
+    margin: 0% 2% 0 0%;}
 .text-wrapper{
     width: 100%;
     position: relative;
